k8s/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: qdrant-svc
  namespace: dev-ns
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 6333
      targetPort: 6333
      protocol: TCP
      name: http
  selector:
    app: qdrant
  type: ClusterIP
