k8s/dev/ingress-dashboard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
  labels:
    ingress-controller: alb
  name: qdrant-dashboard-ingress
  namespace: dev-ns
spec:
  ingressClassName: alb
  rules:
    - host: qdrant-dashboard.dev.atominnolab.com
      http:
        paths:
          - backend:
              service:
                name: qdrant-headless
                port:
                  number: 6333
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - qdrant-dashboard.dev.atominnolab.com
      secretName: ssl-dev.atominnotab.com
